[project]
name = "async-notes"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mypy>=1.15.0",
    "requests>=2.32.3",
    "ruff>=0.11.2",
    "types-requests>=2.32.0.20250328",
]


#MYPY CONFIG
[tool.mypy]
strict = true  # Włącza wszystkie rygorystyczne opcje

# Można zamiast strict podać szczegółowe opcje:
disallow_untyped_defs = true  # Wymaga typów dla wszystkich funkcji
disallow_untyped_calls = true  # Nie pozwala na wywoływanie funkcji bez adnotacji typów
disallow_incomplete_defs = true  # Wymaga typów dla parametrów i zwracanych wartości
disallow_subclassing_any = true  # Zabrania dziedziczenia po nieznanych typach
warn_return_any = true  # Ostrzega, gdy zwracany typ to Any
warn_unused_ignores = true  # Ostrzega, gdy mypy-ignore nie jest potrzebne
warn_redundant_casts = true  # Ostrzega przed zbędnymi rzutowaniami typu
warn_unused_configs = true  # Ostrzega, gdy jakaś opcja konfiguracji jest nieużywana
no_implicit_optional = true  # Nie pozwala na None, jeśli nie jest jawnie podany w Optional

[[tool.mypy.overrides]]
files = "tests.*"
#module = "tests.*"
disallow_untyped_defs = false  # W testach można nie podawać typów
